# p2panda

./: CHANGELOG.md  Cargo.toml
p2panda/: Cargo.toml
p2panda-auth/: Cargo.toml
p2panda-auth/examples/: groups.rs
p2panda-auth/src/: access.rs  graph.rs  lib.rs  polestar.rs
p2panda-auth/src/group/: action.rs  display.rs  member.rs  message.rs  resolver.rs
p2panda-auth/src/group/crdt/: mod.rs  state.rs
p2panda-auth/src/processor/: args.rs  extensions.rs  mod.rs  store.rs
p2panda-auth/src/traits/: mod.rs
p2panda-core/: Cargo.toml
p2panda-core/src/: aliased.rs  hash.rs  identity.rs  lib.rs  operation.rs  timestamp.rs
p2panda-encryption/: Cargo.toml
p2panda-encryption/src/: test_utils.rs
p2panda-encryption/src/crypto/: hpke.rs  x25519.rs
p2panda-encryption/src/data_scheme/: dcgka.rs  group.rs
p2panda-encryption/src/data_scheme/test_utils/: dgm.rs
p2panda-encryption/src/key_bundle/: key_bundle.rs
p2panda-encryption/src/traits/: dgm.rs
p2panda-encryption/src/two_party/: two_party.rs  x3dh.rs
p2panda-net/: Cargo.toml
p2panda-net/tests/: spaces.rs
p2panda-net/tests/impls/: mod.rs
p2panda-spaces/: Cargo.toml
p2panda-spaces/src/: aliased.rs  config.rs  group.rs  lib.rs  manager.rs  member.rs  message.rs  polestar.rs  space.rs  tests.rs  types.rs
p2panda-spaces/src/auth/: message.rs
p2panda-spaces/src/encryption/: dgm.rs
p2panda-spaces/src/test_utils/: forge.rs  mod.rs  store.rs
p2panda-spaces/src/traits/: mod.rs
p2panda-store/src/: memory.rs  sqlite.rs
p2panda-stream/: Cargo.toml
p2panda-stream/src/: operation.rs
p2panda-stream/src/ordering/partial/: mod.rs  operations.rs  store.rs
p2panda-stream/src/stream/: ingest.rs
p2panda-sync-next/: Cargo.toml
