[package]
name = "p2panda-auth"
description = "Decentralised group management with fine-grained, per-member permissions"
version = "0.4.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "glyph <glyph@mycelial.technology>",
]
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["auth", "access-control", "groups"]

[features]
default = ["polestar"]
test_utils = ["dep:rand", "serde"]
serde = ["dep:serde"]
polestar = ["derive_more", "tracing"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
aliased-id = { git = "https://github.com/maackle/aliased-id.git" }
petgraph = { version = "0.8.1", features = ["serde-1"] }
rand = { version = "0.9.0", features = ["alloc"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
thiserror = "2.0.12"

derive_more = { version = "1.0.0", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
rand = { version = "0.9.1", features = ["alloc"] }
serde = { version = "1.0.219", features = ["derive"] }
ciborium = "0.2.2"

[lints]
workspace = true
