[package]
name = "p2panda-spaces"
version = "0.5.2"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "glyph <glyph@mycelial.technology>",
]
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = []
test_utils = ["p2panda-auth/test_utils", "p2panda-encryption/test_utils"]

[dependencies]
named-id = { git = "https://github.com/maackle/named-id.git" }
p2panda-auth = { path = "../p2panda-auth", version = "0.5.2", features = [
  "serde",
], default-features = false }
p2panda-core = { path = "../p2panda-core", version = "0.5.2", default-features = false }
p2panda-encryption = { path = "../p2panda-encryption", version = "0.5.2", features = [
  "data_scheme",
], default-features = false }
petgraph = "0.8.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_matches = "1.5.0"
p2panda-auth = { path = "../p2panda-auth", version = "0.5.2", features = [
  "test_utils",
], default-features = false }
p2panda-encryption = { path = "../p2panda-encryption", version = "0.5.2", features = [
  "test_utils",
], default-features = false }
tokio = { version = "1.46.1", features = ["rt", "macros"] }
